feat: implement comprehensive roadmap management system with tracking, analytics, and frontend integration.